# RCR

./: .gitignore  .gitmodules  README.md  q
2016/Motor_Test/: README.md
2016/Raspberry-Pi/: README.md
2016/Raspberry-Pi/SRC/: main.cpp
2016/Raspberry-Pi/SRC/Camera/: camera.cpp
2016/Raspberry-Pi/SRC/Motor/: CMakeLists.txt  motor.hpp
2016/SRC/: main.cpp
2016/SRC/Encoder/: encoder.hpp
2016/michiyo_description/: package.xml
2016/michiyo_description/meshes/tire/: tire.stl
2016/tominaga5/: tominaga5.tws
2016/tominaga5/tominaga5/: Readme.txt  dbsct.c  sbrk.h  tominaga5.hwp  tominaga5.pgs
2016/tominaga5/tominaga5/Debug/: intprg.h8c  resetprg.h8c  sbrk.h8c  tominaga5.h8c  tominaga5.map
2017/: test.cpp
2017/algorithm/: CMakeLists.txt  readme.md
2017/algorithm/configure/: version.hpp.cmake
2017/algorithm/include/algorithm/: version.hpp
2017/algorithm/src/: main.cpp
2017/analog_reader/src/: main.cpp
2017/arduino/libraries/: .gitignore
2017/arduino/libraries/L3GD20/: L3GD20.cpp  L3GD20.h
2017/arduino/libraries/VL6180X/: #VL6180X.cpp#  (+1 more)
2017/arduino/sketch/: .gitignore
2017/arduino_libraries/: .gitignore
2017/arduino_libraries/L3GD20/: L3GD20.cpp  L3GD20.h
2017/arduino_libraries/VL6180X/: VL6180X.h
2017/arduino_sketch/: .gitignore
2017/arduino_sketch/FUSION/: #ACCEL.h#  #fusion.ino#  .#ACCEL.h  .#fusion.ino  ACCEL.h  fusion.ino
2017/arduino_sketch/KXR94-2050/: kxr94-2050.ino
2017/arduino_sketch/L3GD20/: l3gd20.ino
2017/arduino_sketch/Serial/: Serial.ino
2017/arduino_sketch/VL6180X/: include.sh  vl6180x.ino
2017/arduino_sketch/fusion/: ACCEL.h  Multiplexer.h  fusion.ino
2017/arduino_sketch/kxr94-2050/: kxr94-2050.ino
2017/arduino_sketch/l3gd20/: l3gd20.ino
2017/arduino_sketch/vl6180x/: include.sh  readme.txt  vl6180x.ino
2017/camera/: CMakeLists.txt  readme.md
2017/camera/configure/: version.hpp.cmake
2017/camera/src/: main.cpp
2017/catkin/: .gitignore  readme.md  setup.sh
2017/catkin/src/colored_pole/: CMakeLists.txt  package.xml
2017/catkin/src/colored_pole/src/: colored_pole_node.cpp
2017/catkin/src/colored_pole/srv/: existence.srv
2017/catkin/src/robocar_sim2d/: CMakeLists.txt  package.xml  readme.md
2017/catkin/src/robocar_sim2d/include/turtlesim/: turtle.h  turtle_frame.h
2017/catkin/src/robocar_sim2d/src/: robocar_sim2d_node.cpp  turtle.cpp  turtle_frame.cpp
2017/debugger/: CMakeLists.txt  readme.md
2017/debugger/configure/: version.hpp.cmake
2017/debugger/src/: main.cpp
2017/driver/: CMakeLists.txt  readme.md
2017/driver/configure/: readme.md.cmake
2017/driver/src/: main.cpp
2017/latex/: .gitignore  main.tex  main.toc
2017/latex/Circuit/: Circuit02.aux  Circuit02.dvi  Circuit02.tex
2017/latex/RCR.tex/: interim01.aux  interim01.dvi  interim01.tex
2017/latex/include/: macro.tex  preamble.tex  titlepage.tex
2017/latex/kuwano/: kuwano.aux  kuwano.dvi  kuwano.tex  rcr_no1.docx
2017/latex/list/: list.tex
2017/latex/odom/: #odom.tex#  .#odom.tex  odom.aux  odom.dvi  odom.tex
2017/latex/picture/: items_inherited.eps  kuwano5.eps  level_transmittor.eps  psded.eps  psdf.eps  psdn.eps  psdwd.eps
2017/latex/yamasa/: main.tex
2017/main_camera/: CMakeLists.txt  readme.md
2017/main_camera/configure/: version.hpp.cmake
2017/main_camera/src/: main.cpp
2017/opencv_tester/: CMakeLists.txt  readme.md
2017/opencv_tester/configure/: readme.md.cmake
2017/opencv_tester/src/: main.cpp
2017/processing_sketch/: arduino_output.pde
2017/raspberry_pi/: CMakeLists.txt  readme.md
2017/raspberry_pi/src/: main.cpp
2017/robocar/: CMakeLists.txt  readme.md
2017/robocar/configure/: readme.md.cmake  version.hpp.cmake
2017/robocar/plots/: potential_field.plot
2017/robocar/src/: main.cpp  test.cpp
2017/serial/: CMakeLists.txt  readme.md
2017/serial/configure/: readme.md.cmake  version.hpp.cmake
2017/serial/include/serial/: serial.hpp  wiring_serial.hpp
2017/serial/src/: main.cpp
2017/test/: test1.cpp  test1.cpp~
2017/vector/: CMakeLists.txt  readme.md
2017/vector/src/: main.cpp
2018/: README.md
2018/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
2018/dcmotor/: dcm_stair.py  dcm_test.py  dcm_test2.py  dcm_test3.py  pi150.csv  pi150_3.csv  pi150_4.csv  pi150_5.csv  seikei.csv  seikei2.csv  seikei_03step.csv  step.csv
2018/distancesensor/: dist_get  dist_get.cpp
2018/distancesensor/VL53L0X_rasp_python/: link_test.cpp
2018/photosensor/: Photosensor  Photosensor.cpp  Photosensor.py  Photosensor2.py  Photosensor3.py  Photosensor4.py
2018/ps3/: dcm_control.py  js_action.py  pygame_test.py  radio_control.py  stering_test.py
2018/ros_catkin_ws/build_isolated/: catkin_make_isolated.cache
2018/ros_catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
2018/ros_catkin_ws/install_isolated/: .rosinstall  setup.sh
2018/ros_catkin_ws/src/: .rosinstall
2018/rotaryencoder/: timerinterrupt_test.py
2018/rpiservo/raspberrypi3/: .servo_test.py.swp  servo_test.py
2018/servo/: .servo_test.py.swp  README.md  servo_test.py  servo_test2.py
2018/servo/dcmotor/: dcm_test.py  dcm_test2.py
2018/servo/ps3/: dcm_control.py  js_watch.py
Motor_Test/: motor_driver_test.ino
Raspberry-Pi/SRC/: CMakeLists.txt  main.cpp  main.hpp
Raspberry-Pi/SRC/Camera/: CMakeLists.txt  camera.hpp
Raspberry-Pi/SRC/Motor/: motor.cpp  motor.hpp
SRC/: CMakeLists.txt  main.cpp  main.hpp
SRC/Encoder/: CMakeLists.txt  encoder.cpp
SRC/Motor/: motor.cpp  motor.hpp
SRC/Motor/PipeStream/: pipestream.hpp
michiyo_description/: CMakeLists.txt  display.launch
michiyo_description/meshes/body/: body.dae  body.stl
michiyo_description/meshes/tire/: tire.dae
michiyo_description/urdf/: michiyo.urdf
michiyo_description/urdf/wheel/: wheel.urdf.xacro
tominaga5/: tominaga5.hws
tominaga5/tominaga5/: DefaultSession.hsf  intprg.c  iodefine.h  resetprg.c  sbrk.c  stacksct.h  tominaga5.c  tominaga5.nav  typedefine.h
tominaga5/tominaga5/Debug/: Debug.hdp  dbsct.h8c  tominaga5.abs  tominaga5.h8g  tominaga5.hlk  tominaga5.lib  tominaga5.mot
tominaga5/tominaga5/Release/: Release.hdp
(+1595 files in other folders)
