<?xml version="1.0"?>

<package>
  <name>robocar_sim2d</name>
  <version>0.0.0</version>
  <license>BSD</license>

  <description>
    simple simulator for robocar race
  </description>

  <maintainer email="o104131t@mail.kyutech.jp">
    Yamasaki Tatsuya
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <!-- <build_depend></build_depend> -->
</package>
