<?xml version="1.0"?>

<package>
  <name>robocar_sim2d</name>
  <version>0.0.0</version>
  <license>BSD</license>

  <description>
    simple simulator for robocar race
  </description>

  <maintainer email="o104131t@mail.kyutech.jp">
    Yamasaki Tatsuya
  </maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
